--- a/src/app/v2/edit/edit.module.css
+++ b/src/app/v2/edit/edit.module.css
@@ -183,6 +183,11 @@
     font-size: 12px;
 }
 
+.paletteCardActive {
+    border-color: #60a5fa;
+    background: rgba(37, 99, 235, 0.08);
+}
+
 .paletteCardDragging {
     opacity: 0.6;
 }
